--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -13,7 +13,8 @@
    "id": "16465009",
    "metadata": {},
    "source": [
-    "The file must be sent to stoch-vol-22-fall@yandex.ru with topic \"stoch-vol HW1\". WARNING: topic is important! Inbox will be filtered automatcally based on exact match. Please rename your file as \"SurnameName_HW1.ipynb\" before sending.\n",
+    "The file must be sent to stoch-vol-22-fall@yandex.ru with topic \"stoch-vol HW1\". WARNING: topic is important! Inbox will be filtered automatcally based on exact match. Please zip all files into **one** folder and rename it as \"SurnameName_HW1\" before sending.\n",
+    "\n",
     "\n",
     "**Deadline:** 23th of September, 20:10. \n",
     "\n",
