--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1,9 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bb7abba7",
+   "metadata": {},
+   "source": [
+    "### Home work 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "646b5bb3",
+   "metadata": {},
+   "source": [
+    "The file must be sent to stoch-vol-22-fall@yandex.ru with topic \"stoch-vol HW2\". WARNING: topic is important! Inbox will be filtered automatcally based on exact match. Please zip all files into **one** folder and rename it as \"SurnameName_HW2\" before sending.\n",
+    "\n",
+    "\n",
+    "**Deadline:** 9th of October, 23:59. \n",
+    "\n",
+    "If you have any questions feel free to ask in Telegram https://t.me/v_antipov or https://t.me/igortao. \n",
+    "\n",
+    "**Full name:**\n",
+    "\n",
+    "**Faculty:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d827e0b4",
+   "id": "6b0f8751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a907867",
+   "id": "ac983ab3",
    "metadata": {},
    "source": [
     "## Problem 1: Barrier option replication"
@@ -32,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13cce3e7",
+   "id": "59899a7b",
    "metadata": {},
    "source": [
     "Consider an option that gives the right to buy a stock at time $T$ at a price of $K$, provided that its price has not risen above $B$ for the entire time interval $[0,T]$. If the price rises above $B$, then the option cannot be exercised. The condition that the price exceeds $B$ is checked at discrete times $t_i = i\\Delta t$, where $\\Delta t = T/n$, $i=0,1,...,n$; the value of the price in the intervals between these moments is not taken into account.\n",
@@ -42,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d842b52",
+   "id": "e11736c4",
    "metadata": {},
    "source": [
     "Assume that asset prices are simualted using BS framework. The options and monte carlo parameters are:"
@@ -51,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f3a4b9b",
+   "id": "bd22a590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd6f0f6",
+   "id": "12a133ec",
    "metadata": {},
    "source": [
     "1. Simulate using BS module several asset price trajectories. Choose two simulated paths — one that crosses the barrier before expiration and one that doesn't, plot them. "
@@ -77,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "15ea1740",
+   "id": "73418f2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2490c4f9",
+   "id": "77289993",
    "metadata": {},
    "source": [
     "2. Write a function `price(i: int, s: float, m: float)` that calculates the price of an option at time `T[i]` with the stock price at that time equal to `s` and the price high up to that time `m`."
@@ -95,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "121ebef2",
+   "id": "f6a1019d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d8b21e",
+   "id": "07fb0768",
    "metadata": {},
    "source": [
     "3. Write a function `delta(i: int, s: float, m: float)` that calculates the delta of an option using numerical differentiation (`scipy.misc.derivative`). Pay attention to the `dx` parameter of the `derivative` function and see what it does. Note: the default value of `dx=1` in this problem is bad, because it can lead to price calculation when `s` is negative."
@@ -113,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "426fa33c",
+   "id": "70fe2e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4c59e3",
+   "id": "49cb40cb",
    "metadata": {},
    "source": [
     "3. Take one of the simulated trajectories from question 1 that **crosses** the barrier. Calculate for a given trajectory the entire value trajectory of the replicating portfolio. Compare the trajectory of the replicating portfolio with the trajectory of the option price. Do the trajectories coincide? Why? How long does the calculation take?\n",
@@ -133,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2744e6d3",
+   "id": "e2761993",
    "metadata": {},
    "outputs": [],
    "source": [
