--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -114,7 +114,7 @@
    "id": "77289993",
    "metadata": {},
    "source": [
-    "2. Write a function `price(i: int, s: float, m: float)` that calculates the price of an option at time `T[i]` with the stock price at that time equal to `s` and the price high up to that time `m`."
+    "2. Write a function `price(i: int, s: float, m: float)` that calculates the price of an option at time `T[i]` with the stock price at that time equal to `s` and the price maximum up to that time `m`."
    ]
   },
   {
