--- a/Lab 1.ipynb
+++ b/Lab 1.ipynb
@@ -321,7 +321,7 @@
    "id": "c3e05fe7",
    "metadata": {},
    "source": [
-    "## Episode 2: Local volatility from Monte Carlo perspective (50 points)"
+    "## Episode 2: Local volatility from Monte Carlo perspective 🧠 (50 points)"
    ]
   },
   {
